Replaced Klemmer info with mine

--- a/static/index.html
+++ b/static/index.html
@@ -7,19 +7,18 @@
 </head>
 
 <body>
-	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1 style="font-family:Calibri"><i>Wendy Lee</i></h1> <!--Main header-->
+	<h3 style="font-family:Arial">Project Portfolio</h3>
 
-	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<img href="https://studyabroad.ucsd.edu/_images/campus-advisors/geisel.jpg"> </img>
+	<p style="font-family:Calibri">Wendy is a current UCSD Cognitive Science student with a specialization in Human Computer interaction (HCI) set to graduate in the <i>class of '17.</i> </p>
 
-	<h4>Projects</h4>
-	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
-	</ol>
+	<h3 style="font-family:Calibri">Projects</h4>
+	<ul>
+		<li>Finishing classes</li>
+		<li>Completing work before I graduate</li>
+	</ul>
+
 </body>
+
 </html>
